# pop-metacity-theme

./: PKGBUILD  README.md  meson.build  meson_options.txt
src/: meson.build
src/Pop-dark/metacity-1/: metacity-theme-1.xml
src/Pop/metacity-1/: metacity-theme-1.xml
